--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body
 /* background-image:url("assets/canadian-dollar/canadian-dollar.png"); */
 /* background-image:url("assets/repeated-square/repeated-square.png"); */
 /* background-image:url("assets/webb/webb.png"); */
-background-image:url("assets/so-white/so-white.png");
+/* background-image:url("assets/so-white/so-white.png"); */
 /* font-family: 'Architects Daughter', cursive;
 font-size:1.1em; */
 font-family: 'Open Sans', sans-serif;
